# pet-webcam

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
src/: camera.rs  detector.rs  main.rs  storage.rs
